<resources>
    <string name="app_name">KakaoLinkSample</string>

    <string name="text_type">Choose a text type</string>
    <string-array name="text_types">
        <item>@string/use_text</item>
        <item>@string/no_text</item>
    </string-array>

    <string name="link_type">Choose a link type</string>
    <string-array name="link_types">
        <item>@string/use_weblink</item>
        <item>@string/use_applink</item>
        <item>@string/no_link</item>
    </string-array>

    <string name="image_type">Choose a image type</string>
    <string-array name="image_types">
        <item>@string/use_image</item>
        <item>@string/no_image</item>
    </string-array>

    <string name="button_type">Choose a button type</string>
    <string-array name="button_types">
        <item>@string/use_appbutton</item>
        <item>@string/use_webbutton</item>
        <item>@string/no_button</item>
    </string-array>

    <string name="send_button">Send</string>
    <string name="clear_button">Clear</string>
    <string name="reset_message">Cancel All and Start Again?</string>

    <string name="use_text">Use Text</string>
    <string name="no_text">No Text</string>
    <string name="use_applink">Use App Link</string>
    <string name="use_weblink">Use Web Link</string>
    <string name="no_link">No Link</string>
    <string name="use_image">Use Image</string>
    <string name="no_image">No Image</string>
    <string name="use_appbutton">Use App Button</string>
    <string name="use_webbutton">Use Web Button</string>
    <string name="no_button">No Button</string>

    <string name="kakaolink_text">Welcome to KakaoLinkSample~</string>
    <string name="kakaolink_applink">View More</string>
    <string name="kakaolink_weblink">Go to Website</string>
    <string name="kakaolink_appbutton">View More</string>
    <string name="kakaolink_webbutton">Go to Website</string>
    <string name="send_message">Send the message below?</string>

</resources>