<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/main_activity_layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/activity_title" />

    <EditText
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="23.60"
        android:ems="10"
        android:text="일로와입니다." >

        <requestFocus />
    </EditText>

    <Spinner
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/image_types"
        android:prompt="@string/image_type" />

    <Spinner
        android:id="@+id/link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/link_types"
        android:prompt="@string/link_type" />

    <Spinner
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/button_types"
        android:prompt="@string/button_type" />

    <Button
        android:id="@+id/send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_button" />

    <Button
        android:id="@+id/clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_button" />

</LinearLayout>